# notion_auto_backup

./: .config_file.json  .gitignore  README.md  README.zh.md  create_python_env_in_new_machine.sh  env.sh  main.py  notion_backup.py  pipline.sh  pyproject.toml  toc.py
