[tool.poetry]
name = "notion-up"
version = "0.1.0"
description = ""
authors = ["Dario zdclink@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.27.1"
python-slugify = "5.0.2"
arrow = "1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.7-1"]
build-backend = "poetry.core.masonry.api"
